--- a/Click Me.html
+++ b/Click Me.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Anniversarry!</title>
+    <title>Happy Anniversary!</title>
     <link rel="stylesheet" href="style.css">  
 </head>
 
 <body>
     <div class="topnav">
-        <a class="active">Happy Anniversarry!</a>
+        <a class="active">Happy Anniversary!</a>
         <a href="Graduation.html" target="_self">Graduation</a>
         <a href="New Year.html" target="_self">New Year</a>
         <a href="Birthday.html" target="_self">18<sup>th</sup>Birthday</a>
