--- a/firstweb.html
+++ b/firstweb.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="topnav">
-    <a class="active">Happy Anniversarry!</a>
+    <a class="active">Happy Anniversary!</a>
     <a href="Graduation.html" target="_self">Graduation</a>
     <a href="New Year.html" target="_self">New Year</a>
     <a href="Birthday.html" target="_self">18<sup>th</sup>Birthday</a>
